--- a/PTS/Views/Shared/_Layout.cshtml
+++ b/PTS/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="~/Content/home/img/Home Logo.png" />
     <title>@ViewBag.Title | PTS</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -16,7 +17,7 @@
         <div class="container">
             <!-- Brand -->
             <a class="navbar-brand" href="/Home/Index">
-                <img src="~/Content/home/img/logo.png" style="width:150px;height:50px">
+                <img src="~/Content/home/img/LogoPlantTracker.png" style="width:150px;height:50px">
             </a>
 
             <!-- Toggler/collapsibe Button -->
@@ -93,17 +94,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-xs-12">
-                    <img src="~/Content/home/img/logo.png" alt="plantTracker" class="footer-logo">
+                    <img src="~/Content/home/img/LogoPlantTracker.png" alt="plantTracker" class="footer-logo">
                 </div>
                 <div class="col-md-4 col-xs-12 links">
                     <h4>Quick links</h4>
                     <p><a href="#">About us</a></p>
-                    <p><a href="#">Link</a></p>
-                    <p><a href="#">Link</a></p>
                 </div>
                 <div class="col-md-4 col-xs-12 loc">
                     <h4>Contact</h4>
-                    <p><i class="fas fa-phone-square-alt"></i>+91-987654321</p>
                     <p><i class="far fa-envelope"></i>group7.infotech@gmail.com</p>
                     <p><i class="fas fa-map-marker-alt"></i>Lovely Infotech</p>
                 </div>
